--- a/MyWebDesign/css/style.css
+++ b/MyWebDesign/css/style.css
@@ -9,32 +9,44 @@ body{
     width: 80%;
     margin: auto;
     overflow: hidden;
+    
 }
 ul{
     margin: 0;
     padding: 0;
 }
+
 .button1{
-    background: orangered;
-    height: 30px;
+    background: #67e6dc;
+    height: 20px;
     border: none;
     padding-left: 20px;
     padding-right: 20px;
     color: #ffffff;
+}
+.button2 {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    background: #67e6dc;
+    font-weight: bold;
+    font-size: 14px;
 }
 .dark{
     padding: 15px;
     background: #35424a;
     color: #ffffff;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 header{
-    background: #35424a;
+    background: #020202;
     color: #ffffff;
     padding-top: 30px;
     min-height: 70px;
-    border-bottom: orangered 3px solid;
+    border-top: #f3cc79 3px solid;
+    border-bottom: #f3cc79 3px solid;
 }
 header a{
     color: #ffffff;
@@ -61,19 +73,32 @@ header nav{
     margin-top: 10px;
 }
 header .highlight, header .current a{
-    color: #e8491d;
+    color: #01cbc6;
     font-weight: bold;
 }
 header a:hover{
     color: #cccccc;
     font-weight: bold;
 }
+.highlight1{
+    color: #01cbc6;
+    font-weight: bold;
+    font-size: 25px;
+    border: 1.5px solid white;
+    padding: 5px;
+}
+.page-title{
+    font-size: 30px;
+}
 /*Showcase*/
 #showcase{
     min-height: 400px;
-    background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("../images/showcase.png");
-    text-align: center;
-    color: #eaf0f1;
+    background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("../images/showcase.png") no-repeat;
+    background-position: right;
+    text-align: left;
+    color: #000000;
+    font-weight: bold;
+    border-bottom: #f3cc79 3px solid;
     
 }
 #showcase h1{
@@ -83,28 +108,15 @@ header a:hover{
     
 }
 #showcase p{
-    font-size: 20px;
-    text-align: center;
-    
+    font-size: 18px;
+    text-align: justify;    
 }
-/*Newsletter*/
-#newsletter{
+/*YouTubeChannel*/
+#channel {
     padding: 15px;
     color: #ffffff;
-    background: #35424a;
-}
-#newsletter h1{
-    float: left;
-
-}
-#newsletter form{
-    float: right;
-    margin-top: 15px;
-}
-#newsletter input[type="email"]{
-    padding: 4px;
-    height: 25px;
-    width: 250px;
+    background: #020202;
+    border-bottom: #f3cc79 3px solid;
 }
 /*Boxes*/
 #boxes{
@@ -113,7 +125,7 @@ header a:hover{
 #boxes .box{
     float: left;
     width: 30%;
-    padding:10px;
+    padding:20px;
     text-align: center;
 }
 #boxes .box img{
@@ -125,7 +137,7 @@ aside#sidebar{
     width: 30%;
     margin-top: 10px;
 }
-aside#sidebar .quote input, aside#sidebar .quote textarea{
+aside#sidebar .quote input{
     width: 90%;
     padding: 5px;
 }
@@ -146,18 +158,19 @@ footer{
     padding:10px;
     margin-top: 20px;
     color: #ffffff;
-    background-color: #e8491d;
+    background-color: #020202;
     text-align: center;
+    border-bottom: #f3cc79 3px solid;
+    border-top: #f3cc79 3px solid;
 }
 /*Media Qurey*/
 @media(max-width:768px){
     header #branding,
-     header nav,
-     header nav li,
-     #newsletter form,
-     #boxes .box,
-     article#main-col,
-     aside#sidebar{
+    header nav,
+    header nav li,
+    #boxes .box,
+    article#main-col,
+    aside#sidebar{
 
            float: none;
             text-align: center;
@@ -169,14 +182,5 @@ footer{
     #showcase h1{
         margin-top: 40px;
     }
-    #newsletter button,.quote .button{
-        display: block;
-        width: 100%;
-    }
-    #newsletter form input[type="email"]{
-        width: 100%;
-        margin-bottom: 5px;
-    }
-
-
+   
 }
